--- a/app/src/main/res/layout/activity_movie_recycler.xml
+++ b/app/src/main/res/layout/activity_movie_recycler.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MovieRecyclerActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:layout_width="0dp"
