--- a/app/src/main/res/menu/menu_about.xml
+++ b/app/src/main/res/menu/menu_about.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.zak.monsterofkotlin.MainActivity">
+    tools:context="com.example.zak.monsterofkotlin.AboutActivity">
 
     <item
         android:id="@+id/action_search"
@@ -9,17 +9,10 @@
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="android.support.v7.widget.SearchView"
         android:title="Search"/>
-
     <item
-        android:id="@+id/action_about"
-        android:icon="@android:drawable/ic_menu_info_details"
-        android:title="About this App"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_theme"
+        android:id="@+id/action_share"
         android:orderInCategory="100"
-        android:title="Change app theme"
+        android:title="Share this App"
         app:showAsAction="never" />
 
     <item
