--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -72,7 +72,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <Button
-        android:id="@+id/toast1"
+        android:id="@+id/liveCamsButton"
         android:layout_width="150sp"
         android:layout_height="80sp"
         android:layout_marginEnd="8dp"
@@ -80,7 +80,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="60dp"
-        android:text="Toast 1"
+        android:text="Live Cams"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.783"
         app:layout_constraintStart_toEndOf="@+id/movieButton"
@@ -114,7 +114,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.783"
         app:layout_constraintStart_toEndOf="@+id/toast2"
-        app:layout_constraintTop_toBottomOf="@+id/toast1" />
+        app:layout_constraintTop_toBottomOf="@+id/liveCamsButton" />
 
     <TextView
         android:id="@+id/errorMessage"
@@ -129,7 +129,7 @@
         android:text=""
         android:textColor="@android:color/holo_red_dark"
         android:textSize="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/toast1"
+        app:layout_constraintBottom_toTopOf="@+id/liveCamsButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
