--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".LocationActivity">
 
     <android.support.v7.widget.Toolbar
     android:id="@+id/my_location_toolbar"
@@ -22,12 +24,4 @@
         android:layout_height="match_parent"
         tools:context=".LocationActivity" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="112dp"
-        android:src="@android:drawable/ic_menu_search"/>
-</android.support.design.widget.CoordinatorLayout>
+</android.support.constraint.ConstraintLayout>
